--- a/2024/2024-09-01.md
+++ b/2024/2024-09-01.md
@@ -1,157 +1,76 @@
-# tktk
-## tktk
+# A better way to share news articles
+## Aliased links from Google News are a game changer for ensuring your contacts don't hit paywalls
 
-![]()
-*Photo by tktktk via tktktk
+![Close-up of links of rusty chain](https://blog.pmckay.com/img/nick-fewings-unsplash-1920.jpg)
+*Photo by Nick Fewings via Unsplash*
 
-<!-- Lede item: ~450 words
+**I just belatedly discovered** a handy workaround for sharing news links in a way that works for everyone, even on paywalled content. Happy to document it here for two reasons:
 
+- *So you'll be more confident clicking through links in the newsletter if they seem of interest.* I'm going to begin using everything I tell you below in w3w from here out.
 
+- *So you can use this method yourself* for sharing articles with friends in other contexts, if you think it will help.
 
-An old draft. This really isn't ready for prime time yet. But it could perhaps be brushed up. Sigh...
+The trick involves Google News, which I just noticed has taken to generating aliased addresses to individual articles on third-party sites.
 
+If you click on a link to an article from Google News, your browser will first hit an address with the format "news.google.com/read/something," where "something" is replaced with a long, random identifier and some other metadata. Then Google News uses that ID and metadata to redirect you to the publisher's own site, with a more recognizable link along the lines of newssite.com.
 
+It's already well-known that many paywalled news sites prioritize incoming traffic from Google, since there's usually so much of it. Even in instances where you might hit a paywall if you were to visit an article directly through a publisher's homepage, you can often read the same article for free if you come by clicking via Google.
 
-# How '80s boxing offers insights for fixing our broken internet.
-## Yes, tech's heavyweights should duke it out. But the little guys need their title shots as well.
+But here's where we can now take things a step further: *The presence of the aliased links means we can also use them as news consumers to share articles more effectively with one another, to ensure contacts can read the content no matter what.*
 
-![](https://upload.wikimedia.org/wikipedia/commons/1/1a/Sugar-ray-leonard_vs_Benitez.jpg)
-*Photo by tktktk via tktktk
+To share a news article with a friend in this way:
 
+1. **Right-click** on the link to the article from Google News and select "copy link." This will copy the aliased link to the article onto your device's clipboard.
 
+2. **Paste that aliased link,** not the direct one, into your email, text message, or other app to share with your friend.
 
+3. **Hit send.** V'oila! Your friend will be able to read the article for free.
 
+Honestly, when I describe this method as "new," I specifically mean it's new *to me.* I don't think Google just put it there. To the contrary, I'm pretty sure it's been hiding in plain sight awhile now.
 
-# Why government is a necessary but imperfect tool against Big Tech
-## Part 1 of 3 in a series about the levers for countering the platforms' oligarchy
+It's hard for me to tell exactly how long because news coverage of any changes to Google News is usually framed around what the changes mean *for publishers.* While that's always a contentious issue in the media industry, what I've instead tried to do above is explain how the aliased links could be handy *for users.* This usually doesn't get discussed in Google coverage, frankly.
 
-![Close-up of a Monopoly board game](https://w3w.news/img/ged-carroll-2500.jpg)
-*Photo by Ged Carroll via Flickr under [Creative Commons License](https://creativecommons.org/licenses/by/2.0/). Photo cropped slightly from [Carroll's original](https://www.flickr.com/photos/renaissancechambara/2951844423/in/photolist-5uQYvn-jaRcES-qvxovj-qggAJN-qgfVi1-qxDHqe-pAPYbQ-2XNYr-qgpuSt-qxPsuM-qggAkb-pB4ohP-J5Pmx-5uQY4v-pAPXZY-qgfWHA-qxDKsF-pAPZ6A-3J6xoG-8ujMau-38PKDo-38PKRE-38PKKY-74kf47-xDw5K-38KbyF-e51418-xDw7b-5RKRwp-xDw9S-xDwCw-xDw49-7ML5A1-xDwHj-7ML5Xj-7ML5ns-PnzCb3-7MG6dn-7MG5BK-7MG6UT-7ML6jJ-7ML6Rf-xDw8A-xDwFM-xDw2j-xDvZr-6X5WUA-xDvX7-GKR5fB-8cqFAn).*
+I also feel confident sharing this method with you because I'm absolutely certain media companies are already well aware of it.
 
-_By_ [_Peter A. McKay_](https://pmckay.com)
+As I've [mentioned previously](https://medium.com/the-modern-scientist/make-hyperlinks-work-again-adcca2f2d9db) in the newsletter, publishers may seem publicly gung-ho about paywalling everything these days. But the reality is often more complex, with publishers purposefully making their paywalls "porous" for the sake of maximizing referral traffic as well.
 
-**When mass usage of the web began spreading** back in the 1990s, absolutely no one was giddily rooting for a day to come when just a handful of giant public companies, all based in a single country and worth [over $1 trillion each](https://finance.yahoo.com/news/trillion-dollar-companies-222307746.html), might dictate how everyone on earth experiences the web.
+In other words, they can purposefully turn off preferential treatment of Google traffic *on their own servers* anytime they want. They could make it hit the paywall just like other incoming site visits do. In my work on this post, I noticed Bloomberg News and The Information seem to take this stricter approach, for example.
 
-That was definitely *not* the goal. Yet here we are, facing exactly such as status quo.
-
-I do still hold out hope the situation can be solved, however. Call me naive, but I see three major levers we can pull to make the web a more egalitarian place, as it was envisioned [early on](https://peteramckay.medium.com/a-brief-release-history-of-the-web-aeef5bb3b814).
-
-Each lever has its own strengths and weaknesses, conveniently demonstrated by events of just the last few weeks, as I'll describe below.
-
-No single one of these things alone can fix the ills of Big Tech -- a crucial qualifier I think we sometimes forget. But I believe a sustained combination of them, each used in proper measure over time, would make a massive difference for the better.
-
-### 1) Government
-
-This is perhaps the most obvious and well-publicized lever of late. The great strengths of the government are its unique powers under law and the sheer scale of its resources, which are a handy counterweight to the vast fortunes of Big Tech.
-
-For example, in a court proceeding such as the U.S. Department of Justice's [successful antitrust suit](https://www.theverge.com/24215684/doj-jonathan-kanter-antitrust-google-monopoly-verdict-win-decoder-podcast-interview) against Google, decided earlier this month, the tech giant couldn't just delay interminably, run up the plaintiff's legal fees, and outlast it, as Google might have done with a smaller private-sector rival.
-
-Of course, there's also the legislative option of writing entirely new laws to counter the downsides of emerging technologies as society adopts them. Congress is currently weighing a number of proposals in that vein regarding both crypto and AI, including a bill [passed by the Senate](https://decrypt.co/244411/u-s-senate-passes-anti-deepfake-law-targeting-non-consensual-pornography) on Monday creating civil penalties for pornographic "deepfake" images made without the depicted person's consent.
-
-In my opinion, that's a great idea. But the bill also neatly illustrates one of the weaknesses of government action: It's slow.
-
-In order to go into force as law, that Senate proposal still has to pass the 435-member House of Representatives as well and be signed by the President. Until that happens, really, no actual good has been accomplished. No one's actually been protected from anything.  
-
-The situation is made even more dire by the currently heightened polarization of U.S. To a historic degree, the current Congress has been demonstrably unproductive in terms of ushering bills through all the steps to signage.
-
-
-
-
-
-
-
-
-### 2) Reputation
-
-Big Tech companies don't want to lose customers, and their employees like to cast themselves as good people in general. Maybe we can use that to cajole or convince them simply to act better on their own.
-
-- FB kills anti-misinformation tool https://www.npr.org/2024/08/14/nx-s1-5074143/meta-shutters-tool-used-to-fight-disinformation-despite-outcry | Nieman: https://www.niemanlab.org/2024/08/does-legacy-news-help-or-hurt-in-the-fight-against-election-misinformation/
-
-### 3) Evolution
-
-Build and adopt new products in lieu of the Death Stars' stuff to break their grip on markets and mindshare. Notice I didn't call this process "innovation" - a somewhat abused word these days that only addresses makers' part of the equation. Users also have to play a role here by purposefully trying and migrating to new tools.
-
-Frankly, I'd say some measure of each of the above approaches is probably in order right now, depending on which company and product category one is discussing. But in general, the option that's the most powerful, underutilized, and least discussed is the third - evolution.
-
-As long as our conversation about tech is premised on the idea that everyone absolutely has to use Facebook until the sun flickers out in the sky, Facebook wins. Ditto with assuming Google's permanent dominance in search, Amazon's in retail, and so on.
-
-Unfortunately, this is exactly what most tech press and even some people in the tech industry itself tend to assume, often tacitly. These assumptions then have a nasty way of becoming self-fulfilling.
-
-The good news is that so could a vision of a world with less oligarchy if more people simply dared to imagine it, then set about making it happen, step by step.
-Users' role: 
-
-- USDC issuer Circle's CEO said tap to pay is coming soon to the iPhone. ([Decrypt](https://decrypt.co/244853/usdc-tap-to-pay-on-apple-iphone-incoming-soon-circle-ceo))
-
-
-
-
-
-_By_ [_Peter A. McKay_](https://pmckay.com)
-
-**When I was a teenager,** you did not need to be an avid fight fan at all to be aware of three truly world-famous boxers: Mike Tyson, Buster Douglas, and Sugar Ray Leonard.
-
-The one term the press frequently used to describe Mike Tyson in his heyday was "bully." He represents Big Tech.
-
-Buster Douglas is in Iron Mike's weight class, so he's literally capable of going toe-to-toe with him. That's helpful as a starting point, of course, and he can sometimes deal Tyson a significant loss.
-
-That said, any success he has against Mike is doomed to be fleeting. He's ultimately just not really at the same dazzling talent level. Plus he's big and slow. Yes, Douglas on his best day can be Tyson when he's having a bad day. But if they're *both* having a good day, Tyson wins every time.
-
-Hence Douglas is like the government trying to regulate tech.
-
-Leonard isn't in Tyson's weight class, but they're arguably of similar skill levels considering that they're both in the Boxing Hall of Fame. (Douglas isn't.) But if Leonard succeeds enough, he can always go up in weight class. So who knows what his ceiling is.
-
-Hence Leonard is like a startup.  
-
--->
-
+But those are rare exceptions. If most news orgs are not going to turn this "feature" of their paywalls off, why shouldn't the rest of us make use of it as well?
 
 ### Week in Review: Aug. 25-31, 2024
 
-- tk ([]())
-- tk ([]())
-- tk ([]())
+- **Token prices suffered a weekend slide to end August on a sour note.** Bitcoin was down 12% for the month, and ether tumbled 25%. Recent selling has been particularly heavy during U.S. trading hours, while Asia has been more bullish. ([CoinDesk](https://www.coindesk.com/markets/2024/08/30/bitcoin-slips-back-to-58k-in-continued-desultory-action-but-next-week-could-offer-upside-excitement/))
+
+- **Nevertheless, the longer-term market rally** has caused the number of crypto millionaires to skyrocket. The global population of people with at least $1 million in cryptoassets has [leapt 95%](https://www.cnbc.com/2024/08/27/bitcoin-rally-new-crypto-billionaires.html) over the past year, according to a new report from New World Wealth and Henley & Partners. Yowza. One other caveat: The Wall Street Journal's Carol Ryan reports that crypto bros [aren't buying as many luxury watches](https://www.wsj.com/business/retail/crypto-bros-arent-flipping-watches-that-is-an-issue-for-luxury-brands-f9d8ffde?st=c1kbnswf4gi1mge&reflink=desktopwebshare_permalink) for portfolio diversification as in past bull markets.
+
+- **Crypto hacks were down sharply in August.** But total investor losses have risen 16% to $1.2 billion for the full year so far, according to a [new report](https://assets.ctfassets.net/t3wqy70tc3bv/fYG4wHZa0LfrEFcjqpqm1/c56684e1d8fc95247fd5df6560fe3486/Immunefi_Crypto_Losses_In_August_2024.pdf) from the security firm Immunefi.
+
+- **More signs of AI and web3 crossover:** Story, a startup that uses blockchain tech to protect intellectual property from AI abuses, fetched a [$2.25 billion valuation](https://www.cnbc.com/2024/08/21/blockchain-startup-story-raises-funds-from-a16z-to-stop-ip-theft-by-ai.html) in its latest funding round, led by Andreessen Horowitz. Meanwhile, the startup Decideai deployed a new fully on-chain language model [via the Internet Computer network](https://news.bitcoin.com/fully-onchain-ai-model-deployed-on-internet-computer-icp-blockchain/). And Big Tech platforms are [bidding for bitcoin miners' energy assets](https://news.google.com/read/CBMivgFBVV95cUxQSDM5cmx3S25SSDAzX2hpNGYzcVJRU0tidHQxS0pyUmV3TjN0enJxbVlvakhmQVdkd1J6bjVjSWo3eU1FZjJIQnBMRmVtTFl3a1ptNDUwQk5QQnFrZTNaOW03TW55SFpXV2lBR0VlUFNkYnllblVkdFRxWThWQVBrNkZxeXpLMnd1T05mLVJHMEdwanZYRHJ1YWpKZ1NWS1M4dXFyck9nT3MwemdRMjZ3RmFENlNXYkxOOTdEWEpB?hl=en-US&gl=US&ceid=US%3Aenx) as a way to power electricity-hungry AI applications.
+
+- **French authorities charged Telegram CEO Pavel Durov** with failing to curb extremist and illegal content on his platform. He was released from jail under judicial supervision after posting bail of 5 million euros. ([France 24](https://www.france24.com/en/europe/20240829-telegram-chief-durov-freed-on-bail-after-being-formally-charged-over-crime-on-messaging-app))
+
+- **OpenSea**, a popular trading platform for non-fungible tokens, received a notice from the U.S. Securites and Exchange Commission of possible enforcement actions to come. OpenSea's CEO said the SEC's notice alleges NFTs are unregistered securities. ([Investopedia](https://finance.yahoo.com/news/nft-marketplace-opensea-gets-wells-195100087.html))
+
+- **U.S.-based web3 development platform Alchemy** announced it has [acquired](https://www.alchemy.com/blog/alchemy-acquires-bware-labs) Romania's Bware Labs for an undisclosed sum.
+
+- **Yikes.** A man stabbed Haru Invest CEO Hyung-soo "Hugo" Lee during a court appearance in Seoul. Lee, whose injuries are not life-threatening, is charged with defrauding users of more than $1 billion. ([Reuters](https://www.reuters.com/world/asia-pacific/south-korean-crypto-firm-haru-invest-ceo-stabbed-during-fraud-trial-police-say-2024-08-29/))
 
 ### Community
 
-- tk ([]())
-- tk ([]())
-- tk ([]())
-- tk
-- CTA for new subs <!-- Pickup from last week -->
-- Add BTC addy...
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar -->
+- **I've now enabled chat on Substack** for paid w3w subscribers. First thread is [here](https://open.substack.com/chat/posts/fcaca61c-7199-4045-8399-2cc720168b0e), ostensibly set up to discuss this edition of the newsletter. But we can talk there about whatever tech-related stuff is on your mind, really.
+
+- **I've been thinking about starting a subscriber Discord as well.** But now I'm wondering whether Substack chat might be sufficient as a discussion channel for us instead? If you have thoughts about this, I'm definitely interested to hear either via Substack chat or email peter[at]w3w[dot]media. Free-tier readers, would you be more likely to buy a paid subscription if it came with Discord access?
+
+- **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra goodies compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and you'll receive an invite to a w3w Discord I'm launching soon. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack/subscribe) ☯️ 😉  
 
 ### Odds & Ends
 
-<!-- A lot of leftovers from the last few weeks here. Probably more likely to share these on LinkedIn or Twitter. But a few could be good for the newsletter... -->
+- **Berkshire Hathaway became** the first U.S.-listed company outside the tech sector to top a $1 trillion valuation on Wednesday. As it happens, the milestone arrived just ahead of legendary co-founder Warren Buffett's 94th birthday on Friday. ([New York Times](https://news.google.com/read/CBMikAFBVV95cUxNUTB0UU1rS1JTVU9RbHVmeC1tY3N4bjZrSnBDbFdaVjV6WFVReDBiNGJwaVYwQk1DR285THVqZ3hjOVdsalY5RnJlZXhpZkRuYzVLTXhrRjRMM0tLVFpwSm96eU5UR09qWUNlNU80OExQVHFGOWtRZFF4cXA0NkRQUGpDNWowRUE3M0xuOGpiX2c?hl=en-US&gl=US&ceid=US%3Aen))
 
-- https://slate.com/life/2024/08/drinks-alcohol-recipes-gin-tonic-taste-test.html
+- **Many ballet dancers are eschewing comfier shoes** now available on the market, preferring the traditional pointe style as a rite of passage. No extra shock-absorbent foam lining or arch support for them, thanks! 🤦 ([Wall Street Journal](https://www.wsj.com/lifestyle/ballet-shoes-pointe-comfortable-designs-241958e3?st=f7xceiar7se6h84&reflink=desktopwebshare_permalink))
 
-- https://decrypt.co/246226/how-companies-are-using-virtual-reality-and-ai-for-mental-health-therapy
-
-- https://www.nytimes.com/2024/08/18/business/media/star-tribune-minnesota.html
-
-- https://www.livescience.com/space/asteroids/dinosaur-killing-asteroid-rare-rock-beyond-jupiter
-
-- https://www.theatlantic.com/ideas/archive/2023/03/social-media-algorithms-twitter-meta-rss-reader/673282/
-
-- https://feedland.com/?river=true&screenname=peteramckay
-
-- Twitter: https://www.mlb.com/news/sean-manaea-surprises-fans-playing-softball-in-central-park
-
-- LinkedIn: https://blog.cloudflare.com/declaring-your-aindependence-block-ai-bots-scrapers-and-crawlers-with-a-single-click
-
-- Substack (subs): https://hbr.org/2024/08/why-wisdom-work-is-the-new-knowledge-work
-
-- Harrison's concert for Bangladesh is now streaming: https://www.salon.com/2024/08/09/george-harrison-concert-for-bangladesh/ | https://lnk.to/TheConcertForBangladesh
-
-- https://www.space.com/stars-near-sun-milky-way-history-gaia-space-telescope
-
-- https://www.washingtonpost.com/dc-md-va/2024/08/05/12-year-old-maryland-fishing-award-first-female/
-
-- https://themerkle.com/understanding-the-relationship-between-market-cap-and-token-price-a-closer-look/
-
-- An old link from CoinDesk re: intersection of AI and crypto. Could also be a good subscriber link.  https://www.coindesk.com/consensus-magazine/2024/05/23/why-decentralized-ai-is-gaining-steam/
+- **The Duke of Burgundy once waged war** against an "evil and disloyal" grape. ([Salon](https://www.salon.com/2024/08/26/when-wine-became-warfare-the-duke-of-burgundys-crusade-against-the-evil-and-disloyal-gamay-grape/))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
