Updating Sept 2024 drafts

--- a/2024/2024-09-01.md
+++ b/2024/2024-09-01.md
@@ -4,39 +4,35 @@
 ![Close-up of links of rusty chain](https://blog.pmckay.com/img/nick-fewings-unsplash-1920.jpg)
 *Photo by Nick Fewings via Unsplash*
 
-**I just belatedly discovered** a handy workaround for sharing news links in a way that works for everyone, even on paywalled content. Happy to document it here for two reasons:
-
-- *So you'll be more confident clicking through links in the newsletter if they seem of interest.* I'm going to begin using everything I tell you below in w3w from here out.
-
+**I have belatedly discovered** a handy workaround for sharing news links in a way that works for everyone, even on most paywalled content. Happy to document it here for two reasons:
+- *So you'll be more confident clicking through links in this newsletter* if they seem of interest. I'm going to begin using everything I tell you below in w3w from here out.
 - *So you can use this method yourself* for sharing articles with friends in other contexts, if you think it will help.
 
 The trick involves Google News, which I just noticed has taken to generating aliased addresses to individual articles on third-party sites.
 
-If you click on a link to an article from Google News, your browser will first hit an address with the format "news.google.com/read/something," where "something" is replaced with a long, random identifier and some other metadata. Then Google News uses that ID and metadata to redirect you to the publisher's own site, with a more recognizable link along the lines of newssite.com.
+That is to say, if you click on a link to an article from Google News, your browser will first hit an address with the format "news.google.com/read/something," where "something" is replaced with a long, random identifier and some other metadata. Then Google News apparently uses that ID and metadata to redirect you to the publisher's own site, with a more recognizable link along the lines of "publishersite.com/storylink."
 
-It's already well-known that many paywalled news sites prioritize incoming traffic from Google, since there's usually so much of it. Even in instances where you might hit a paywall if you were to visit an article directly through a publisher's homepage, you can often read the same article for free if you come by clicking via Google.
+It's already well-known that many paywalled news sites prioritize incoming traffic from Google, since there's usually so much of it. Even in instances where you might hit a paywall if you were to visit an article directly through a publisher's homepage, you can often read the same article for free if you come to it by clicking via Google.
 
-But here's where we can now take things a step further: *The presence of the aliased links means we can also use them as news consumers to share articles more effectively with one another, to ensure contacts can read the content no matter what.*
+But here's where we can now take things a step further: The presence of the aliased links means we can also use them as news consumers to share articles more effectively *with one another*, to ensure our contacts can read the content no matter what.
 
 To share a news article with a friend in this way:
+1. **Right-click on the link** to the article from Google News and select "copy link." This will copy the aliased link to the article onto your device's clipboard.
+2. **Paste that aliased link,** not the direct one to the publisher’s site, into your email, text message, or other app to share with your friend.
+3. **Hit send.** Voilà! Your friend will be able to read the article for free.
 
-1. **Right-click** on the link to the article from Google News and select "copy link." This will copy the aliased link to the article onto your device's clipboard.
+Honestly, when I describe this method as "new," I specifically mean it's new *to me*. I don't think Google recently put it there. To the contrary, I'm pretty sure it's been hiding in plain sight awhile now.
 
-2. **Paste that aliased link,** not the direct one, into your email, text message, or other app to share with your friend.
-
-3. **Hit send.** V'oila! Your friend will be able to read the article for free.
-
-Honestly, when I describe this method as "new," I specifically mean it's new *to me.* I don't think Google just put it there. To the contrary, I'm pretty sure it's been hiding in plain sight awhile now.
-
-It's hard for me to tell exactly how long because news coverage of any changes to Google News is usually framed around what the changes mean *for publishers.* While that's always a contentious issue in the media industry, what I've instead tried to do above is explain how the aliased links could be handy *for users.* This usually doesn't get discussed in Google coverage, frankly.
+It's hard for me to tell exactly how long because news coverage of any changes to Google News is usually framed around what those changes mean *for publishers*, as this is always a contentious issue in the media industry.
+What I have instead tried to do above is explain how the aliased links could be handy *for users*. This framing tends to garner surprisingly little discussion in mainstream news coverage of Google News, frankly.
 
 I also feel confident sharing this method with you because I'm absolutely certain media companies are already well aware of it.
 
-As I've [mentioned previously](https://medium.com/the-modern-scientist/make-hyperlinks-work-again-adcca2f2d9db) in the newsletter, publishers may seem publicly gung-ho about paywalling everything these days. But the reality is often more complex, with publishers purposefully making their paywalls "porous" for the sake of maximizing referral traffic as well.
+As I've [mentioned previously](https://medium.com/the-modern-scientist/make-hyperlinks-work-again-adcca2f2d9db) in w3w, publishers may seem publicly gung-ho about paywalling everything these days. But the reality is often more complex, with publishers purposefully making their paywalls "porous" for the sake of maximizing referral traffic as well.
 
-In other words, they can purposefully turn off preferential treatment of Google traffic *on their own servers* anytime they want. They could make it hit the paywall just like other incoming site visits do. In my work on this post, I noticed Bloomberg News and The Information seem to take this stricter approach, for example.
+In other words, they can purposefully turn off preferential treatment of Google traffic on their own servers anytime they want. They could make it hit their paywalls just like other incoming site visits do. In my work on this post, for example, I noticed Bloomberg News and The Information do indeed take this stricter approach.
 
-But those are rare exceptions. If most news orgs are not going to turn this "feature" of their paywalls off, why shouldn't the rest of us make use of it as well?
+But those are rare exceptions. The vast majority of news orgs are not going to turn off this "feature" of their paywalls anytime soon. So why shouldn't the rest of us make use of it?
 
 ### Week in Review: Aug. 25-31, 2024
 
