--- a/2024/2024-09-08.md
+++ b/2024/2024-09-08.md
@@ -1,50 +1,57 @@
-# tktk
-## tktk
+# Beware the normalization of surveillance
+## After two decades plus of post-9/11 "security" measures, our acclimation to being constantly spied upon is a problem unto itself.  
 
-![Close-up of a Monopoly board game](https://w3w.news/img/ged-carroll-2500.jpg)
-*Photo by Ged Carroll via Flickr under [Creative Commons License](https://creativecommons.org/licenses/by/2.0/). Photo cropped slightly from [Carroll's original](https://www.flickr.com/photos/renaissancechambara/2951844423/in/photolist-5uQYvn-jaRcES-qvxovj-qggAJN-qgfVi1-qxDHqe-pAPYbQ-2XNYr-qgpuSt-qxPsuM-qggAkb-pB4ohP-J5Pmx-5uQY4v-pAPXZY-qgfWHA-qxDKsF-pAPZ6A-3J6xoG-8ujMau-38PKDo-38PKRE-38PKKY-74kf47-xDw5K-38KbyF-e51418-xDw7b-5RKRwp-xDw9S-xDwCw-xDw49-7ML5A1-xDwHj-7ML5Xj-7ML5ns-PnzCb3-7MG6dn-7MG5BK-7MG6UT-7ML6jJ-7ML6Rf-xDw8A-xDwFM-xDw2j-xDvZr-6X5WUA-xDvX7-GKR5fB-8cqFAn).*
+**I just belatedly stumbled across a powerful quote about privacy** from lawyer and activist Albert Fox Cahn. In a [TED talk](https://www.youtube.com/watch?v=hVclObff6fc) last year, he recounts how public attitudes have changed since his early encounters with the New York Police Department in particular:  
 
-<!--
+*"As a teenage protester, NYPD camcorders shoved in my face, I saw surveillance as a threat. And people thought my fears were something out of science fiction. Today they increasingly think that surveillance is inevitable, and that privacy is the fantasy."*
 
-Lede item: Should run ~450 words. A few possibilities...
+But Cahn ultimately sees that shift as reason for optimism. Alluding to the ways that mass surveillance has been turbocharged by the internet over the years, he adds:
 
-- NEWMANTRA: A newsletter about emerging tech, for newbies and OGs alike. Emerging tech made accessible.
+*"It had to get this bad for the denial to break, and for the public to act."*
 
-- 4PART: The token can market can safely be broken down into several categories -- bitcoin, ethereum, major stablecoins, and everything else. Here's why that matters.
+I truly hope Cahn is right about that. I'm not so sure myself, to be honest.
 
-- LINKS: Riff on Google News hack for making stories shareable. MTA story example: https://news.google.com/read/CBMiggFBVV95cUxQWlFTWXYzTlVGY2gyYWVhbGNsQUJHVE5rVFVwcE02SFFtSkRSWVpSMFVWZkttNzV3aUhkdldmY0tDZmttWTFXTjh1MWpGQ1hlbzE2SlFYUmEwQ1F5czl2bVdWQzNncGdKcjJFTldWUnBCbGIwemZ4bUh0SmxCdk9PLVhB?hl=en-US&gl=US&ceid=US%3Aen
+To play devil's advocate, one could also argue that people's resignation to surveillance is ultimately emboldening companies and government agencies to become more aggressive over time in their information gathering.
 
-- STRING: See page at https://www.notion.so/String-b5f6d8f2bb6f4eacb96c95276dc242bb
+Yes, some people have been moved to action to make the situation better. But have there really been enough of us? If so, why does Facebook still have over [3 billion monthly active users](https://www.statista.com/statistics/272014/global-social-networks-ranked-by-number-of-users/), for example?
 
--->
+At any rate, I'm glad to say this isn't the first time I've highlighted Cahn's important work in the newsletter. Previously I was struck in particular by [an essay](https://www.wired.com/story/20-years-after-911-surveillance-has-become-a-way-of-life/) he wrote for Wired in 2021 about America's sharp increase in surveillance after the 9/11 terror attacks, ostensibly to increase everyone's protection against similar threats.
+
+As the 23rd anniversary of the attacks approaches Wednesday, I think it's worth us all re-visiting that trade-off again. Honestly, I for one have serious doubts America is safer now than on Sept. 10, 2001. 
+
+However, I am certain [that article of Cahn's](https://www.wired.com/story/20-years-after-911-surveillance-has-become-a-way-of-life/) about civil liberties holds up pretty well three years on. And I know that's really hard for any writer to do.
 
 ### Week in Review: Sept. 1-7, 2024
 
-- tk ([]())
-- tk ([]())
-- tk ([]())
+- **Binance CEO Richard Teng** told Axios that company founder Changpeng "CZ" Zhao is banned for life from operating the exchange. Such a prohibition would be stricter than previously disclosed to the public. It's also especially relevant right now as Zhao is due to be released from U.S. prison later this month. ([Cointelegraph](https://www.msn.com/en-us/money/companies/binance-ceo-says-cz-is-banned-from-managing-or-operating-the-exchange/ar-AA1q4jhI))
+
+- **Mixed news for Bitcoin:** BTC's price fell 7% for the week, hurt by worries about the U.S. economy. Mining profitability is at [a record low](https://www.coindesk.com/markets/2024/09/04/bitcoin-mining-profitability-is-stuck-at-record-lows-jpmorgan-says/), according to new research from JPMorgan. But on a more promising note, [CoinDesk reports](https://finance.yahoo.com/news/illiquid-bitcoin-now-record-74-111708231.html) that almost three-quarters of the circulating bitcoin supply is now illiquid, a new record. Such a trend effectively reflects heightened scarcity of the token, which tends to favor higher prices over the long run.
+
+- **The Ethereum scaling platform Polygon phased out MATIC** as its native token. Instead, it's now using POL, which will bring added utility to the network as part of its Polygon 2.0 roadmap. ([Decrypt](https://decrypt.co/247763/polygon-matic-pol-migration-september-4))
+
+- **A Ripple-issued stablecoin could begin trading soon,** perhaps within weeks, said Ripple CEO Brad Garlinghouse in remarks at the Korea Blockchain Week conference in Seoul. ([CoinDesk](https://www.coindesk.com/business/2024/09/04/ripple-usd-stablecoin-could-be-issued-in-weeks-not-months-garlinghouse/))
+
+- **The Washington Post reports** that an AI-powered search engine in the works at OpenAI [isn't close](https://www.washingtonpost.com/technology/2024/09/04/openai-searchgpt-chatgpt-google/) to being an adequate replacement for Google yet.
+
+- **Researchers say chatbots** interacting with minimal supervision on a Discord server they set up began developing their own unique social dynamics and cultural quirks. ([Decrypt](https://decrypt.co/247867/ai-chatbots-have-begun-to-create-their-own-culture-researchers-say))
+
+- **India has become the biggest market** for the metaverse platform Sandbox, its co-founder said. ([CoinDesk](https://www.coindesk.com/business/2024/09/04/the-sandboxs-largest-market-for-creators-is-now-india-co-founder-sebastien-borget/))
+
+- **VC updates:** Andreessen Horowitz [shut down](https://techcrunch.com/2024/09/04/andreessen-horowitz-shutters-its-miami-office-after-two-years/) its Miami Beach office, in a setback for South Florida's ambitions to become a tech hub. Separately, Y Combinator founder Paul Graham went viral with a [new post](https://paulgraham.com/foundermode.html) about "founder mode" startup management, which he apparently believes is some groundbreaking, previously undocumented phenomenon. Color me [highly skeptical](https://x.com/peteramckay/status/1831774774558912555).
+
+- **Showdown set in the Bay State.** Pro-crypto Republican John Deaton won his party's Massachusetts primary for U.S. Senate. He's now set to face Elizabeth Warren, the Democratic incumbent who's a fervent crypto nemesis, in November's general election. Warren will be a heavy favorite to win. ([Roll Coll](https://rollcall.com/2024/09/03/elizabeth-warren-draws-crypto-backed-gop-challenger/))
 
 ### Community
 
-- **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra goodies compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and you'll receive an invite to a w3w Discord I'm launching soon. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack/subscribe) ☯️ 😉  
-
-- tk ([]())
-
-- Add BTC addy...
-
-- Just enabled Substack chat. A possible alternative to Discord?
-
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar
+- **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra perks compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and chat features. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack/subscribe) ☯️ 😉  
 
 ### Odds & Ends
 
-<!-- Some evergreen candidates... -->
+- **Contract negotiations between Disney and DirecTV hit a dramatic impasse.** More than 11 million DirecTV subscribers lost access to Disney-owned sports giant ESPN just in time for the start of American football season. The companies' battle underscores how streaming has wreaked havoc on the traditional television and satellite business in recent years. ([Variety](https://variety.com/2024/tv/news/disney-directv-espn-dark-abc-carriage-1236126479/))
 
-- https://www.livescience.com/space/asteroids/dinosaur-killing-asteroid-rare-rock-beyond-jupiter
+- **The New York Times reports** that flooding and extreme temperatures due to climate change are prematurely aging bridges, with [potentially catastrophic consequences](https://news.google.com/read/CBMiekFVX3lxTE8yVm5uOEVDbGxSWUFDaXNJVlREOGZlOTIta3VsMWpzaDZtcVBMa3JuMnk1dE1pYmVkOW1MM2Z5WkZwdkJDaFc4eXp2UE1na2lZR01FMHJmT1prV1g0ZzlTMkMtd3AzMktPbG9PUHdyNnY5cmx0QXVKdDZB?hl=en-US&gl=US&ceid=US%3Aen). One study estimates 25% of steel bridges in the U.S. could collapse by 2050. 👀
 
-- https://www.space.com/stars-near-sun-milky-way-history-gaia-space-telescope
-
-- https://slate.com/life/2024/08/drinks-alcohol-recipes-gin-tonic-taste-test.html
+- **A new study suggests** dogs have some level of comprehension of words on soundboard buttons that owners can use to communicate with their pets. One researcher described the findings as "a good first step" toward better understanding the extent of dogs' linguistic comprehension, as well as potential new uses of it. ([Salon](https://www.salon.com/2024/09/04/yes-dogs-understand-words-from-soundboard-buttons-study-finds/))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
