Adding YouTube embed

--- a/2024/2024-09-08.md
+++ b/2024/2024-09-08.md
@@ -1,6 +1,8 @@
 # Beware the normalization of surveillance
 ## After two decades plus of post-9/11 "security" measures, our acclimation to being constantly spied upon is a problem unto itself.  
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hVclObff6fc?si=z5GWR_KkFobdf2WX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 **I just belatedly stumbled across a powerful quote about privacy** from lawyer and activist Albert Fox Cahn. In a [TED talk](https://www.youtube.com/watch?v=hVclObff6fc) last year, he recounts how public attitudes have changed since his early encounters with the New York Police Department in particular:  
 
 *"As a teenage protester, NYPD camcorders shoved in my face, I saw surveillance as a threat. And people thought my fears were something out of science fiction. Today they increasingly think that surveillance is inevitable, and that privacy is the fantasy."*
@@ -17,7 +19,7 @@ Yes, some people have been moved to action to make the situation better. But hav
 
 At any rate, I'm glad to say this isn't the first time I've highlighted Cahn's important work in the newsletter. Previously I was struck in particular by [an essay](https://www.wired.com/story/20-years-after-911-surveillance-has-become-a-way-of-life/) he wrote for Wired in 2021 about America's sharp increase in surveillance after the 9/11 terror attacks, ostensibly to increase everyone's protection against similar threats.
 
-As the 23rd anniversary of the attacks approaches Wednesday, I think it's worth us all re-visiting that trade-off again. Honestly, I for one have serious doubts America is safer now than on Sept. 10, 2001. 
+As the 23rd anniversary of the attacks approaches Wednesday, I think it's worth us all re-visiting that trade-off again. Honestly, I for one have serious doubts America is safer now than on Sept. 10, 2001.
 
 However, I am certain [that article of Cahn's](https://www.wired.com/story/20-years-after-911-surveillance-has-become-a-way-of-life/) about civil liberties holds up pretty well three years on. And I know that's really hard for any writer to do.
 
